@@ -1,7 +1,14 @@
+2011-10-03  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* include/bits/hashtable.h (_Hashtable<>::insert(value_type&&),
+	insert(const_iterator, value_type&&)): Don't define here...
+	* include/bits/unordered_set.h (__unordered_set<>,
+	__unordered_multiset<>): ... define here instead.
+
 2011-09-29  Jason Merrill  <jason@redhat.com>
 
 	* testsuite/util/testsuite_tr1.h (test_property): Avoid
-	ambguity.
+	ambiguity.
 
 2011-10-01  François Dumont  <fdumont@gcc.gnu.org>
 
